# UDock2_nmrbox

./: README.md  imgui.ini
models/: cylinder-center.mtl  flame_centered.mtl  midShip4_centered.mtl  tf_centered.mtl
molecules/: 1P9M_A.mol2  1P9M_B.mol2  1P9M_C.mol2  cube.mol2
shaders/: constraint.fragment.glsl  constraint.vertex.glsl  expandPoint2Quad_text.geom.glsl  flat_color.fragment.glsl  flat_color.vertex.glsl  fragment.glsl  fragment_mesh.glsl  fragment_mesh_normal.glsl  line.fragment.glsl  line.vertex.glsl  mesh_normal_color.fragment.glsl  mesh_normal_color.vertex.glsl  screen.fragment.glsl  skybox.fragment.glsl  skybox.vertex.glsl  spaceship.fragment.glsl  spaceship.vertex.glsl  testRayMarching.glsl  textsphere_computed.frag.glsl  vertex.glsl  vertex_mesh.glsl  vertex_mesh_normal.glsl
src/: CMakeLists.txt  compile.sh  udock.sh
src/glm/: CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake  glmConfig.cmake  glmTargets.cmake
src/glm/glm/: CTestTestfile.cmake  Makefile  cmake_install.cmake  libglm_shared.dylib
src/glm/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/glm/test/bug/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/glm/test/core/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/glm/test/ext/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/glm/test/gtc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/glm/test/gtx/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/glm/test/perf/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl_gl3.cpp  imgui_internal.h
src/include/: Atom.h  Camera-old.h  Camera.h  CameraTrans.h  ConstraintManager.h  Energy.h  FPScamera.h  Gamepad.h  MolecularHandler.h  Molecule.h  Transform.h  UI.h  billboardshader.h  docking_scene.h  enum_scene.h  gl3w.h  hasher3d.h  input.h  marching_cubes.h  mol2_io.h  motion.h  particles_emitter.h  pdb_io.h  pickupRay.h  render.h  render_utils.h  scene_data.h  shaders_utils.h  spaceship_controller.h  spaceship_input.h  spaceship_scene.h  surfaces.h  timer.h
src/udock/: Atom.cpp  gl3w.c  main.cpp  marching_cubes.cpp
